2001-02-13  Alexander V. Lukyanov  <lav@yars.free.net>

	* HttpDir.cc: accept perms string 11 char long.
	* misc.cc: accept last + in perms string as ACL tag.
	* commands.cc: open command file in ascii mode.

2001-02-07  Alexander V. Lukyanov  <lav@yars.free.net>

	* Resolver.cc: fix rare spinning when parent process terminates.
	* ftpclass.cc: don't bind data socket to loopback address.

2001-02-04  Alexander V. Lukyanov  <lav@yars.free.net>

	* url.cc: fix Combine when proto==NULL.

2001-02-03  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileCopy.cc, FileFeeder.cc, Filter.cc, Http.cc, LocalAccess.cc,
	  ProcWait.cc, buffer.cc, ftpclass.cc, keyvalue.cc: use E_RETRY macro.
	* FileCopy.h: drop size information if pos>size.

2001-01-25  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc: print error to debug output from Http::Read.
	* Job.cc: add timeout when displaying status of several jobs in cycle.
	* pgetJob.cc: more space in status line for eta.

2001-01-12  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: fix opie/skey reply.
	* Http.cc: some fixes for PUT and `100 Continue'.

2000-12-20  Alexander V. Lukyanov  <lav@yars.free.net>

	* commands.cc: also use ':' as user/pass separator.
	* ftpclass.cc, resource.cc: ftp:fix-pasv-address setting.

2000-12-18  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc, misc.cc, misc.h, ftpclass.cc: move mktime_from_utc to
	  misc.cc.
	* HttpDir.cc: correct array size.
	* lftp.cc: add cmd:save-cwd-history setting.
	* Speedometer.cc: show up to 99 seconds eta in seconds.

2000-12-08  Chmouel Boudjnah <chmouel@mandrakesoft.com>

	* CatJob.cc, commands.cc, complete.cc: add bzcat and bzmore support.

2000-12-01  Alexander V. Lukyanov  <lav@yars.free.net>

	* resource.cc: hftp:use-authorization.
	* Http.cc: send port in Host: header; hftp:use-authorization new
	  setting.

2000-11-27  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileAccess.cc, FileAccess.h, Http.cc, ftpclass.cc, ftpclass.h,